
<resources>
<string name="app_name">UAS</string>
<string name="name_wisata">Wisata Di Rohil</string>
<string name="detail_wisata">Detail</string>
    <string name="lokasi_wisata">Lokasi</string>
    <string name="rating">Rating</string>
    <string name="ulasan">Ulasan</string>
<string name="list_view">List View</string>
<string name="grid_view">Grid View</string>
<string name="card_view">Card View</string>
<string name="share_data">Share Data</string>
<string name="image_grid">Image Grid</string>
<string name="image_card">Image Card</string>
<string name="image_wisata">Image Wisata</string>
<string name="pusat_pemerintahan">Pusat Pemerintahan</string>
<string name="bupati_walikota">Bupati/Walikota</string>
<string name="luas_wilayah">Luas Wilayah (km2)</string>
<string name="jumlah_penduduk">Jumlah Penduduk (2020)</string>
<string name="jumlah_kecamatan">Jumlah Kecamatan</string>
<string name="jumlah_kelurahan">Jumlah Kelurahan</string>
<string name="jumlah_desa">Jumlah Desa</string>
<string name="tampilkan_peta_wilayah">Tampilkan Peta Wilayah</string>
<string name="image_view_peta">Image View Peta</string>

</resources>