<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerInside"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_wisata" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_wisata"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <!-- Tabel Informasi Wisata -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <!-- Baris untuk Lokasi -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/lokasi_wisata"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/lokasi_wisata"
                    android:textSize="16sp"/>
            </TableRow>

            <!-- Baris untuk Detail -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/detail_wisata"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/detail_wisata"
                    android:textSize="16sp"/>
            </TableRow>

            <!-- Baris untuk Rating -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/rating"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/rating"
                    android:textSize="16sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>
